minor spacing fixes

--- a/src/components/ForecastDisplay/ForecastDisplay.css
+++ b/src/components/ForecastDisplay/ForecastDisplay.css
@@ -14,6 +14,11 @@
 }
 
 @media (min-width: 576px) {
+  #location-found-row {
+    margin-top: 24px;
+    margin-bottom: 12px;
+  }
+
   #forecast-display-row {
     margin-top: -10px;
     margin-right: -30px;
@@ -21,5 +26,11 @@
 
   #location-found-txt {
     margin-left: 0;
+  }
+}
+
+@media (min-width: 992px) {
+  #location-found-row {
+    margin-top: 48px;
   }
 }
